# opencv_clion

./: .gitignore  CMakeLists.txt  binary.threshhold.cpp  birdview.cpp  blur.cpp  canny.cpp  canny.sobel.laplacian.cpp  equal.hist.cpp  erode.cpp  filters.cpp  main.cpp  mat.init.cpp  morphology.cpp  resize.pyrup.down.cpp  table_find_transform.cpp  wraped_doc.cpp
